--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,10 @@
         android:layout_height="wrap_content"
         android:text="@string/button_save_location"/>
 
+    <Button
+        android:id="@+id/buttonWhereami"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_whereami"/>
+
 </LinearLayout>
